gccida/g2/emit_move_insn
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/emit_move_insn/src/expr.c:3238:27: error: use of undeclared identifier 'machine_mode'
if ( !memory_address_p( ( machine_mode)*( ( unsigned __int8 *)v3 + 2), v3->fld[0].rtx) 
                          ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/emit_move_insn/src/expr.c:3239:25: error: use of undeclared identifier 'machine_mode'
&& !push_operand( v3, ( machine_mode)*( ( unsigned __int8 *)v3 + 2)) 
                        ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/emit_move_insn/src/expr.c:3249:26: error: use of undeclared identifier 'machine_mode'
if ( memory_address_p( ( machine_mode)*( ( unsigned __int8 *)v5 + 2), v5->fld[0].rtx) ) 
                         ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/emit_move_insn/src/obj/expr.o] Error 1
